--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
     display: flex;
     justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .main-container {
     display: flex;
     flex-direction: column;
     background-color: rgb(83, 83, 95);
-    height: 450px;
+    height: 460px;
     max-width: 320px;
     border-radius: 10px;
     border: 2px solid black;
@@ -15,13 +16,18 @@ body {
 
 .display {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     background-color: rgb(235, 233, 233);
     padding-right: 10px;
     font-size: 18px;
+    gap: 0px;
+    height: 73px;
     margin: 13px 13px;
     border-radius: 3px;
+    align-items: flex-end;
+    justify-content: flex-end;
     border: 2px solid black;
+    margin-bottom: 12px;
 }
 
 .buttons {    
@@ -29,7 +35,7 @@ body {
     flex-wrap: wrap;
     gap: 10px;
     padding: 15px;
-    padding-top: 10px;
+    padding-top: 4px;
 }
 
 .bigger {
@@ -40,9 +46,41 @@ button {
     width: 65px;
     height: 60px;
     font-size: 18px;
-    border: 1px solid black;
+    border: 2px solid black;
+    background-color: rgb(255, 255, 255);
+    border-radius: 4px;
 }
 
 button:hover {
-    background-color: rgb(181, 181, 184);
+    background-color: rgb(223, 223, 223);
+}
+
+.red {
+    background-color: rgb(241, 97, 97);
+}
+
+.blue {
+    background-color: rgb(128, 146, 245);
+}
+
+.red:hover {
+    background-color: rgb(199, 81, 81);
+}
+
+.blue:hover {
+    background-color: rgb(106, 120, 202);
+}
+
+p {
+    padding: 0;
+    margin: 0;
+    font-size: 25px;
+}
+
+.smaller {
+    font-size: 17px;
+}
+
+.margin {
+    margin: 5px 2px;
 }
