--- a/style.css
+++ b/style.css
@@ -1,86 +1,90 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     display: flex;
+    align-items: center;
     justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
-button {
-    width: 65px;
-    height: 60px;
-    font-size: 18px;
-    border: 2px solid black;
-    background-color: rgb(255, 255, 255);
-    border-radius: 4px;
+.frame {
+    margin-top: 20px;
+    width: 320px;
+    height: 400px;
+    background-color: #575757;
+    box-shadow: 0px 14px 1px #414342;
 }
 
-button:hover {
-    background-color: rgb(223, 223, 223);
-}
-
-p {
-    padding: 0;
-    margin: 0;
-    font-size: 25px;
-}
-
-.main-container {
+.calculator {
+    height: inherit;
+    width: inherit;
     display: flex;
-    flex-direction: column;
-    background-color: rgb(83, 83, 95);
-    height: 460px;
-    max-width: 320px;
-    border-radius: 10px;
-    border: 2px solid black;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    color: #404040;
 }
 
 .display {
+    justify-self: center;
+    align-self: center;
+    margin-top: 5px;
+    width: 300px;
+    height: 60px;
+    box-shadow: inset 0px 4px 1px #a9baae,
+                inset 0px -4px 1px #a9baae,
+                0px 4px 1px #3c3d3e;
+    background-color: #bcd1c0;
+    grid-column: span 4;
     display: flex;
-    flex-direction: column;
-    background-color: rgb(235, 233, 233);
-    padding-right: 10px;
-    font-size: 18px;
-    gap: 0px;
-    height: 73px;
-    margin: 13px 13px;
-    border-radius: 3px;
-    align-items: flex-end;
-    justify-content: flex-end;
-    border: 2px solid black;
-    margin-bottom: 12px;
+    justify-content: end;
 }
 
-.buttons {    
+.display > p {
+    font-family: 'Orbitron';
+    font-size: 32px;
+    margin-right: 10px;
+    align-self: center;
+    color: #29342d;
+}
+
+button {
+    margin: 6.5px;
+    background-color: #ececec;
+    border: solid 1px #767676;
+    box-shadow: inset 0px -2px 1px #8f8f8f,
+                0px 3px 1px #474a48;
+    height: 50px;
+    width: 65px;
+    justify-self: center;
+    align-self: center;
+    font-size: 30px;
+    color: #3f3f3f;
+}
+
+.equals {
+    color: #fff8fe;
+    box-shadow: inset 0px -2px 1px #a44751;
+    background-color: #f9686b;
+}
+
+.display ,
+.frame,
+button {
+    border-radius: 10px;
+}
+
+.buttons {
+    margin-top: 30px;
     display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding: 15px;
-    padding-top: 4px;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    flex-direction: row;
 }
 
-.bigger {
-    width: 140px;
-}
-
-.red {
-    background-color: rgb(241, 97, 97);
-}
-
-.blue {
-    background-color: rgb(128, 146, 245);
-}
-
-.red:hover {
-    background-color: rgb(199, 81, 81);
-}
-
-.blue:hover {
-    background-color: rgb(106, 120, 202);
-}
-
-.smaller {
-    font-size: 17px;
-}
-
-.margin {
-    margin: 5px 2px;
+.buttons > button {
+    width: 100px;
 }
